test/syntaxerrors/TestDetectSemicolonMethod.jdc
meth();

void meth(); {
    //do something
}